# LD-Notion-Desktop

./: .gitignore  Authorization  Build your first integration  Connecting to Notion MCP  Creating pages from templates  Importing external files  Linux.do 帖子导出到 Notion  NOTION MCP Supported tools  Notion API Overview  Notion MCP - Integrating your own MCP client  Overview  Publishing to Notion's Integration Gallery  README.md  Retrieving existing files  Security best practices  Uploading larger files  Uploading small files  Working with comments  Working with databases  Working with page content  linux_do_post_template.html  notion_to_html_exporter.js
backend/: Cargo.toml
backend/src/: config.rs  lib.rs  main.rs
backend/src/db/: mod.rs  schema.sql
backend/src/engine/: backup.rs  image.rs  markdown_io.rs  mod.rs  page.rs  page_tree.rs  trash.rs  version.rs  workspace.rs
backend/src/mcp/: handler.rs  mod.rs  transport.rs
backend/src/search/: mod.rs
backend/tests/: e2e.rs  mcp_integration.rs
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tsconfig.json
desktop/src/components/: BlockEditor.css  BlockEditor.tsx  KeyboardShortcuts.css  KeyboardShortcuts.tsx  OutlinePanel.css  OutlinePanel.tsx  PageTree.css  PageTree.tsx  SearchBar.css  SearchBar.tsx  SearchResults.css  SearchResults.tsx  Sidebar.css  Sidebar.tsx  SlashCommand.css  SlashCommand.tsx  StatusIndicator.css  StatusIndicator.tsx  TagBar.css  TagBar.tsx  ThemeToggle.css  ThemeToggle.tsx  (+2 more)
(+10 files in other folders)
