[package]
name = "ld-notion-backend"
version = "0.1.0"
edition = "2021"
description = "LD-Notion Hub 本地知识库引擎后端服务"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 异步 Stream 工具
futures = "0.3"
# Web 框架
axum = "0.8"
# SQLite 数据库
rusqlite = { version = "0.34", features = ["bundled"] }
# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# UUID 生成
uuid = { version = "1", features = ["v4"] }
# 日期时间
chrono = { version = "0.4", features = ["serde"] }
# HTTP 中间件 (CORS)
tower-http = { version = "0.6", features = ["cors"] }
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# YAML 解析（frontmatter）
serde_yaml = "0.9"
# 异步 trait
async-trait = "0.1"
# 错误处理
thiserror = "2"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
